Bug 154265 - Cannot return to (first) slide when in presentation mode
Summary: Cannot return to (first) slide when in presentation mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:24.2.0 target:7.6.1 target:7.5.6
Keywords:
Depends on:
Blocks: Slide-Show
  Show dependency treegraph
 
Reported: 2023-03-19 00:21 UTC by Gerald Pfeifer
Modified: 2023-08-15 10:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document (PPTX) (7.25 MB, application/vnd.ms-powerpoint)
2023-03-19 00:21 UTC, Gerald Pfeifer
Details
Simplified sample document (5.89 MB, application/vnd.ms-powerpoint)
2023-03-19 00:36 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2023-03-19 00:21:11 UTC
Created attachment 186062 [details]
Sample document (PPTX)

How to reproduce:

 1. Open sample document.
 2. Start presentation mode and proceed to the last slide.
 3. Try to return to earlier slides (via <Left> or <PgUp>).
 4. Notice how you never are able to return to slide 1.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6f54b54ec3dc51fb8824adb08620fde4c70d10f2
CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US

back to 6.4 and likely earlier.
Comment 1 Gerald Pfeifer 2023-03-19 00:36:42 UTC
Created attachment 186063 [details]
Simplified sample document

I think I managed to simplify the original sample document even further.

Note that PowerPoint *is* able to return to the first slide for both of
these documents via <Left> or <PgUp>.
Comment 2 claudiuv 2023-03-25 13:08:58 UTC
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ee5dbd193fa24b46fb980ddd8a6c39ca349d0d01
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: CL threaded

Steps:

 1. Open sample document.
 2. Start presentation mode and proceed to the last slide.
 3. Try to return to earlier slides (via <Left> or <PgUp>).

Actual |results:

 - never return to slide 1
Comment 3 BogdanB 2023-04-06 15:05:13 UTC
Also in
Version: 7.3.7.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Ubuntu package version: 1:7.3.7-0ubuntu0.22.04.2
Calc: threaded
Comment 4 Commit Notification 2023-08-14 19:41:04 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/850b66f969834e61f3cb1a1ccd4bfc15f23d558f

tdf#154265 Disable automatic slide advancement when moving backwards

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-08-15 09:24:23 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/6acb20111c5b65bdca8ef401154d8eb943b62945

tdf#154265 Disable automatic slide advancement when moving backwards

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-08-15 09:26:27 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/57edae9d6931f60cedae6b2d6fd24f42fa28faa5

tdf#154265 Disable automatic slide advancement when moving backwards

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Gerald Pfeifer 2023-08-15 10:04:15 UTC
Happy to verify as fixed with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a2b6be8af9be3237efc3ed1244302cf899680e97
CPU threads: 8; OS: Linux 6.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US

I also verified the original, full presentation that I could not
upload here as fixed.