tdf#154265 Disable automatic slide advancement when moving backwards

When a slide has a 0 second automatic slide advance setting, and you move
back to that slide, it would immediately move forward again.

Only enable automatic slide advancement when moving forwards.

Change-Id: I3c901bed5323569f5cf52aeca5b3227c87b6e539
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155663
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
(cherry picked from commit 2815c357ed4aa1b97cbf4fb407a0d55d70ff7488)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155692
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>