slideshow/source/engine/slideshowimpl.cxx
@@ -478,6 +478,7 @@ private:
     bool                                    mbShowPaused;
     bool                                    mbSlideShowIdle;
     bool                                    mbDisableAnimationZOrder;
+    bool                                    mbMovingForward;
 
     EffectRewinder                          maEffectRewinder;
     FrameSynchronization                    maFrameSynchronization;
@@ -589,6 +590,7 @@ SlideShowImpl::SlideShowImpl(
       mbShowPaused( false ),
       mbSlideShowIdle( true ),
       mbDisableAnimationZOrder( false ),
+      mbMovingForward( true ),
       maEffectRewinder(maEventMultiplexer, maEventQueue, maUserEventQueue),
       maFrameSynchronization(1.0 / FrameRate::PreferredFramesPerSecond)
 
@@ -1214,6 +1216,7 @@ void SlideShowImpl::redisplayCurrentSlide()
 
 sal_Bool SlideShowImpl::nextEffect()
 {
+    mbMovingForward = true;
     osl::MutexGuard const guard( m_aMutex );
 
     if (isDisposed())
@@ -1230,6 +1233,7 @@ sal_Bool SlideShowImpl::nextEffect()
 
 sal_Bool SlideShowImpl::previousEffect()
 {
+    mbMovingForward = false;
     osl::MutexGuard const guard( m_aMutex );
 
     if (isDisposed())
@@ -2253,7 +2257,8 @@ void SlideShowImpl::notifySlideAnimationsEnded()
         // step slides manually.
         if( !mbForceManualAdvance &&
             !mpRehearseTimingsActivity &&
-            bHasAutomaticNextSlide )
+            bHasAutomaticNextSlide &&
+            mbMovingForward )
         {
             aNotificationEvents = makeInterruptableDelay(
                 [this]() { return this->notifySlideEnded( false ); },
